--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,306 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    padding: 0;
+    background-color: rgb(65, 135, 182);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.title {
+    text-align: center;
+    margin-top:  20%;
+    font-family: "special elite", sans-serif;
 }
+
+.title a {
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    font-size: 22px;
+}
+
+.navbar {
+    text-align: center;
+    font-family: "josefin slab", sans-serif;
+}
+
+.navbar a {
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+}
+
+a:hover {
+    color: #535562;
+}
+
+/* LOGIN */
+.login-page form {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.login-page header {
+    text-align: center;
+    margin-bottom: 8px;
+    font-family: "special elite", sans-serif;
+}
+
+.login-page input {
+    display: block;
+    margin: 0 auto;
+    width: 200px;
+    height: 20px;
+    margin-bottom: 8px;
+
+    font-family: "josefin slab", sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.login-page button {
+    display: block;
+    margin: 0 auto;
+    width: 80px;
+    height: 30px;
+    font-family: "josefin slab", sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+    text-align: inherit;
+    background-color: rgb(255, 255, 255);
+    border-color: rgb(255, 255, 255);
+    line-height: 30px;
+}
+
+.login-page button:hover {
+    background-color: #535562;
+    border-color: #535562;
+    cursor: crosshair;
+}
+
+.return {
+    margin-top: 250px;
+}
+
+.return a {
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    font-size: 15px;
+    font-family: "special elite", sans-serif;
+}
+
+.return a:hover {
+    color: #535562;
+}
+/* LOGIN */
+
+
+
+
+/* SIGNUP */
+.signup form{
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.signup header {
+    text-align: center;
+    margin-bottom: 8px;
+    font-family: "special elite", sans-serif;
+}
+
+.signup input {
+    display: block;
+    margin: 0 auto;
+    width: 200px;
+    height: 20px;
+    margin-bottom: 8px;
+
+    font-family: "josefin slab", sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.signup button {
+    display: block;
+    margin: 0 auto;
+    width: 80px;
+    height: 30px;
+    font-family: "josefin slab", sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+    text-align: inherit;
+    background-color: rgb(255, 255, 255);
+    border-color: rgb(255, 255, 255);
+    line-height: 30px;
+}
+
+.signup button:hover {
+    background-color: #535562;
+    border-color: #535562;
+    cursor: crosshair;
+}
+/* SIGNUP */
+
+
+/* DASHBOARD */
+.dashboard {
+    width: 100vw;
+    background-color: rgb(213, 212, 218);
+
+    display: flex;
+    flex-direction: row;
+}
+
+.dash-title, .dash-title h1 {
+    margin-top: 0;
+}
+
+.dashboard a {
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    font-size: 15px;
+    font-family: "josefin slab", sans-serif;
+}
+/* DASHBOARD */
+
+
+
+/* DASHNAV */
+.dashnav {
+    background: rgb(65, 135, 182);
+}
+
+.dashnav h1 {
+    font-family: "special elite", sans-serif;
+    margin-top: 10px;
+    padding-left: 40px;
+    padding-top: 10px;
+    margin-bottom: 0;
+    background: rgb(65, 135, 182);
+    height: 45px;
+    width: 175px;
+}
+.dashnav nav {
+    margin-top: 20px;
+    margin-right: 20px;
+    margin-top: 22px;
+    height: 21px;
+
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.dashnav a {
+    text-decoration: none;
+    color: white;
+}
+/* DASHNAV */
+
+
+
+/* LEFT SIDE DASHBOARD */
+.left {
+    width: 250px;
+
+    position: relative;
+}
+
+aside {
+    display: flex;
+    min-height: 100vh;
+    width: 250px;
+    flex-direction: column;
+}
+
+.one, .two, .three {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    align-items: center;
+    justify-content: center;
+    width: 250px;
+    background-color: #535562;
+    border: 1px solid black;
+    border-top: none
+}
+
+.inside-three, .inside-two, .inside-one {
+    text-align: center;
+    font-family: "josefin slab", sans-serif;;
+}
+
+.one, .two, .three:hover {
+    font-size: 18px;
+    color: white;
+}
+
+.inside-three:hover, .inside-two:hover, .inside-one:hover {
+    font-size: 18px;
+}
+
+/* LEFT SIDE DASHBOARD */
+.right {
+    margin: 0 auto;
+    width: 70%;
+}
+/* ADD INVENTORY */
+.inventory-form {
+    background-color: white;
+    height: 120px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin-top: 10px;
+
+    -webkit-box-shadow: 0px 0px 12px -4px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 12px -4px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 12px -4px rgba(0,0,0,0.75);
+    
+}
+
+.inventory-form select {
+    font-family: "josefin slab", sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 15px;
+    margin-left: 20px;
+}
+
+.inventory-form input {
+    /* display: block;
+    margin: 0 auto; */
+    width: 200px;
+    height: 20px;
+    margin-bottom: 8px;
+
+    font-family: "josefin slab", sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+    margin: 0 20px;
+}
+
+#button {
+    background-color: rgb(230, 7, 7);
+    margin-top: 20px;
+    color: white;
+    width: 150px;
+    font-size: 18px;
+    height: 25px;
+    line-height: 25px;
+    text-align: center;
+}
+
+
+
+
+
+
+
+
+
+
+
