--- a/src/index.css
+++ b/src/index.css
@@ -203,8 +203,6 @@ a:hover {
 /* LEFT SIDE DASHBOARD */
 .left {
     width: 250px;
-
-    position: relative;
 }
 
 aside {
@@ -244,6 +242,7 @@ aside {
 .right {
     margin: 0 auto;
     width: 70%;
+    
 }
 /* ADD INVENTORY */
 .inventory-form {
@@ -294,13 +293,38 @@ aside {
     text-align: center;
 }
 
+/* USERINFO display */
 
+.table {
+    width: 100%;
+    color: white;
+    font-family: "josefin slab", sans-serif;
 
+    -webkit-box-shadow: 0px 0px 12px -4px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 12px -4px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 12px -4px rgba(0,0,0,0.75);
+}
+.table th{    
+    background-color: #484A55;
+    color: white;
+}
 
+.table-date {
+    text-align: left;
+    width: 100px;
+}
 
+.info {
+    color: black;
+    text-align: center;
+    background-color: white;
+}
 
+#uno {
+    background-color: white;
+}
 
-
-
-
+#dos {
+    background-color: #EFEEED;
+}
 
