--- a/src/index.css
+++ b/src/index.css
@@ -150,6 +150,8 @@ a:hover {
 
     display: flex;
     flex-direction: row;
+
+    height: 100vh;
 }
 
 .dash-title, .dash-title h1 {
@@ -241,8 +243,7 @@ aside {
 /* LEFT SIDE DASHBOARD */
 .right {
     margin: 0 auto;
-    width: 70%;
-    
+    width: 70%;   
 }
 /* ADD INVENTORY */
 .inventory-form {
@@ -327,4 +328,95 @@ aside {
 #dos {
     background-color: #EFEEED;
 }
+
+.edit {
+    height: 92%;
+    overflow-y: scroll;
+    /* background-color: white; */
+    margin-top: 20px;
+
+    /* -webkit-box-shadow: 0px 0px 12px -4px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 12px -4px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 12px -4px rgba(0,0,0,0.75); */
+}
+
+#filteredCategory {
+    font-family: "josefin slab", sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+    margin: 20px;
+}
+
+#date {
+    font-family: "josefin slab", sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+    margin: 20px;
+    width: 125px;
+    border: 3px solid rgb(65, 135, 182);
+}
+
+.x {
+    line-height: 20px;
+    
+
+}
+
+.x:hover {
+    cursor: pointer;
+    background: #484A55;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
