--- a/src/index.css
+++ b/src/index.css
@@ -364,15 +364,6 @@ aside {
     margin: 20px;
 }
 
-#date {
-    font-family: "josefin slab", sans-serif;
-    font-size: 18px;
-    font-weight: bold;
-    margin: 20px;
-    width: 125px;
-    border: 3px solid rgb(65, 135, 182);
-}
-
 .x {
     line-height: 20px;
 }
@@ -382,25 +373,49 @@ aside {
     background: #484A55;
 }
 
-.edit-inventory {
-    -webkit-box-shadow: 0px 0px 12px -4px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 0px 12px -4px rgba(0,0,0,0.75);
-    box-shadow: 0px 0px 12px -4px rgba(0,0,0,0.75);
-}
-
 .edit-options {
-    background-color: white;
+    background-color: #484A55;
     -webkit-box-shadow: 0px 0px 12px -4px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 12px -4px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 12px -4px rgba(0,0,0,0.75);
-}
-
-.view-table {
-    width: 100%!important;
 }
 
 .name {
     font-weight: bold;
+    color: rgb(65, 135, 182);
+    text-decoration: underline;
+}
+
+.edit-info {
+    display: grid;
+    grid-template-columns: 50px 100px 300px 100px 100px 100px;
+    justify-content: center;
+    list-style: none;
+    margin: 3px auto;
+    height: 36px;
+    line-height: 36px;
+    font-family: "josefin slab", sans-serif;
+}
+
+.header {
+    background-color: rgb(154, 154, 159);
+    height: 30px!important;
+    line-height: 43px!important;
+    font-weight: bold;
+    /* margin-bottom: 10px!important; */
+    padding-bottom: 10px;
+    margin-top: 0;
+}
+
+.edit-form {
+    display: grid;
+    grid-template-columns: 300px 100px 100px 100px 75px;
+    justify-content: center;
+    list-style: none;
+    margin: 3px auto;
+    height: 36px;
+    line-height: 36px;
+    font-family: "josefin slab", sans-serif;
 }
 /* EDIT/DELETE */
 
